--- a/model_collection/model_collection.htm
+++ b/model_collection/model_collection.htm
@@ -35,7 +35,7 @@
         <li><a href="#gdb">Geodatabase Format Collection and Catalog</a>
         <li><a href="#obj">Open Source Format Collection and Catalog</a>
         <li><a href="#datadictionary">Data Dictionary for Model Catalog</a> 
-        <li><a href="#status">Model Status Dictionary</a>
+        <li><a href="#status_domain">Model Status Dictionary</a>
         <li><a href="#LOD">Levels of Detail and other Recommendations for Model Structure</a>
     </ul>
 
