modified:   model_management/index.htm

--- a/model_management/index.htm
+++ b/model_management/index.htm
@@ -4,7 +4,7 @@
 <!-- Hi Folks, this is the template file for pages in the citySchema.org documentation library -->
 <head>
     <title>Model Collection Management</title>
-    <meta name="description" content="Covers the procedures formanaging a collection of 3D building models as part od a GIS-based city modeling project.  Par of the citySchema.org framework fro developing, sharing and preserving city model assets. ">
+    <meta name="description" content="Covers the procedures formanaging a collection of 3D building models as part od a GIS-based city modeling project.  Par of the citySchema.org framework foo developing, sharing and preserving city model assets. ">
     <meta name="keywords" content="City Modeling, Digital Humanities, Geography, citySchema">
     <meta name="author" content="Paul B. Cote">
     
@@ -36,7 +36,7 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter. -->
     <h1 class="title">Managing the Building Model Collection using ArcGIS Pro</h1>
   
-<p style="background-color:khaki"><b>This page is currently under development!</b>  <br>November 22, 2021.</p> 
+<p style="background-color:khaki"><b>This page is currently under development!</b>  <br>December 8, 2021.</p> 
 
     <p>This page provides an overview of the procedures and tools for managing the collection of 3D models od buildings, bridges, walls and docks as part of a city model within the <a href="../home.index.htm">citySchema.org framework for developing, sharing and preserving city model assets</a>.
     </p><p> 
@@ -482,7 +482,7 @@ Stages in the lifesycle of a model management workspace are depicted in the slid
     <p>The citySchema project does not make any assumptions about what editing tool you use.  Any tool that can open our SketchUp format tiles or OBJ format models, and can in turn export models in triangulated OBJ format can be used in our model editing and import workflow.  
     </p><p>For our demonstrations we use SketchUp.  
     </p>
-    <div>
+  </div>
 
       <h3>Import, Double-Check and Identify Multipatch Models</h3>
       <p>
